--- a/todo
+++ b/todo
@@ -1,11 +1,6 @@
-- 1 - описать тип UserType
-- 2 - указать нужный тип в useState с users
-- 3 - дописать типы и логику функции pureAddUserCallback и проверить её тестами
-- 4 - в файле GreetingContainer.tsx дописать типизацию пропсов
-- 5 - в файле GreetingContainer.tsx указать нужные типы в useState с name и error
-- 6 - в файле GreetingContainer.tsx дописать тип и логику функции setNameCallback
-- 7 - в файле GreetingContainer.tsx дописать логику функций pureAddUser, pureOnBlur, pureOnEnter и проверить их тестами
-- 8 - в файле GreetingContainer.tsx вычислить количество добавленных и имя последнего (totalUsers, lastUserName)
-- 9 - в файле Greeting.tsx дописать типизацию пропсов
-- 10 - в файле Greeting.tsx вычислить inputClass в зависимости от наличия ошибки
-- 11 - сделать стили в соответствии с дизайном
+/\*
+
+- 1 - в файле Pages.tsx дописать роуты на все страницы
+- 2 - в файле Sidebar.tsx дописать className так чтоб вешался класс s.active когда мы уже на соответствующей странице
+- 3 - застилизовать хэдэр и сайдбар в соответствии с дизайном
+- \*/
